--- a/src/App.css
+++ b/src/App.css
@@ -4,52 +4,56 @@
   padding: 0;
   box-sizing: border-box;
 }
-a {
-  text-decoration: none;
-  color: yellow;
-  font-weight: 600;
-}
 body {
   background-color: black;
   font-family: "Titillium Web", sans-serif;
   padding: 1rem 5rem 2rem;
 }
-header img {
-  width: 20rem;
-}
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.card-container {
-  background-image: url(images/artetus.png);
+  .form-container {
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+  }
+
+  input,
+  textarea {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  label {
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+  }
+  .text-red {
+    color: red;
+    font-size: 14px;
+    margin-top: 5px;
+  }
+  .text-green {
+    color: green;
+    font-size: 14px;
+  }
+button[type='submit'] {
+  background-color: #4CAF50;
   color: white;
-  border-radius: 5px;
-  margin: 1.2rem;
-  padding: 1.2rem;
-  width: 30%;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
-.date {
-  color: grey;
-  margin-bottom: 1.2rem;
+button[type='submit']:hover {
+  background-color: #3e8e41;
 }
-.card-container:hover {
-  box-shadow: rgb(32, 152, 209) 0px 0px 10px 3px, rgb(0, 0, 0) 0px 0px 10px;
-}
-.summary {
-  padding-bottom: 2rem;
-}
-.card-container a {
-  padding-top: 1rem;
-  width: 100%;
-  display: block;
-  border-top: 2px solid rgb(142, 46, 46);
-}
-.movies-container {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  width: 100%;
+.loading{
+  width: 1.5rem;
 }
